Update api-docs and generate shopping cart api layer
