# src/app/api/models/cart-item.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface CartItem {
+  id?: number;
+  productId?: number;
+  quantity?: number;
+}
