# src/app/api/models/cart.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+/* eslint-disable */
+import { CartItem } from '../models/cart-item';
+export interface Cart {
+  id?: number;
+  items?: Array<CartItem>;
+}
