# src/app/api/services.ts
@@ -1,4 +1,5 @@
 export { UserControllerService } from './services/user-controller.service';
+export { CartControllerService } from './services/cart-controller.service';
 export { AuthenticationControllerService } from './services/authentication-controller.service';
 export { ProductControllerService } from './services/product-controller.service';
 export { OrderControllerService } from './services/order-controller.service';
